Bug 148313 - CRASH: Basic IDE crashing while resizing dialog
Summary: CRASH: Basic IDE crashing while resizing dialog
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: BASIC (show other bugs)
Version:
(earliest affected)
7.3.1.3 release
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.4.0 target:7.3.3
Keywords: bibisected, bisected, haveBacktrace, regression
Depends on:
Blocks: BASIC-IDE
  Show dependency treegraph
 
Reported: 2022-04-01 20:15 UTC by Rafael Lima
Modified: 2022-04-27 18:55 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
Video showing the crash (883.98 KB, video/mp4)
2022-04-01 20:15 UTC, Rafael Lima
Details
bt with debug symbols (7.54 KB, text/plain)
2022-04-02 09:25 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Rafael Lima 2022-04-01 20:15:28 UTC
Created attachment 179260 [details]
Video showing the crash

See the attached video. LibreOffice is crashing when resizing a dialog in the Basic IDE.

Note that if you simply create a new dialog and resize it, everything is fine. However, if you add controls, save the changes, close the IDE and reopen it, then the crash will happen.

Steps to reproduce:
1) Open the Basic IDE
2) Create a new dialog
3) Add some controls to the dialog
4) Save
5) Close LibreOffice
6) Reopen LO and open the Basic IDE
7) Try resizing the dialog created in step 2
8) After a few resize operations, LO will crash

System info:
Version: 7.3.2.2 / LibreOffice Community
Build ID: 30(Build:2)
CPU threads: 16; OS: Linux 5.13; UI render: default; VCL: kf5 (cairo+xcb)
Locale: pt-BR (pt_BR.UTF-8); UI: en-US
Ubuntu package version: 1:7.3.2~rc2-0ubuntu0.21.10.1~lo1
Calc: threaded
Comment 1 Julien Nabet 2022-04-02 09:25:31 UTC
Created attachment 179272 [details]
bt with debug symbols

On pc Debian x86-64 with master sources updated today + gtk3 rendering, I could reproduce this.
Comment 2 Julien Nabet 2022-04-02 09:27:50 UTC
I could also reproduce this with gen rendering so not gtk3 specific.

To make it crash, I just need to resize the dialog box once or twice after having reopened the macro.
Comment 3 Xisco Faulí 2022-04-18 12:16:43 UTC
Regression introduced by:

author	Noel Grandin <noel@peralex.com>	2021-08-17 16:04:56 +0200
committer	Noel Grandin <noel.grandin@collabora.co.uk>	2021-08-18 21:17:19 +0200
commit 2e74c1107bc8422ee7a819722f3f0a366127330f (patch)
tree 8004b2354f82be22acb9fb4ca281366977213b14
parent e0dcf1a55547b124be227b6326173aa62bc2dcf8 (diff)
use visitor callback to avoid container construction (tdf#105575)

Bisected with: bibisect-linux64-7.3

Adding Cc: to Noel Grandin
Comment 4 Commit Notification 2022-04-19 13:16:07 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/d40c6601330b70c3cb9c1be0fa9e9775ad51113c

tdf#148313 Basic IDE crashing while resizing dialog

It will be available in 7.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Julien Nabet 2022-04-19 19:36:50 UTC
With master sources updated today, I don't reproduce this anymore.
Thank you Noel for the fix!
Comment 6 Commit Notification 2022-04-20 03:25:53 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "libreoffice-7-3":

https://git.libreoffice.org/core/commit/a1820d4c62e8f38faa6360f1de168622d296d049

tdf#148313 Basic IDE crashing while resizing dialog

It will be available in 7.3.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2022-04-27 10:25:13 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "libreoffice-7-3-3":

https://git.libreoffice.org/core/commit/54c5ee4b87514a40425b15a583813cdfd60c95ab

tdf#148313 Basic IDE crashing while resizing dialog

It will be available in 7.3.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.