tdf#148313 Basic IDE crashing while resizing dialog

Change-Id: Ic68b78f26626f346f3ef8b54a584de64165d9eb2
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/133170
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>
(cherry picked from commit d40c6601330b70c3cb9c1be0fa9e9775ad51113c)